--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </div>
             </div>
 
-            <a href="index.html">Launch Platform</a>
+            <a href="landingPage.html">Launch Platform</a>
         </div>
     </div>
   
